# template-python-cli

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/my_project/: cli.py
