[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "my-project"
description = "Short description of what this tool does."
requires-python = ">=3.12"
license = "MIT"
dynamic = ["version"]
dependencies = []

[project.scripts]
my-project = "my_project.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/tsilva/my-project"
Repository = "https://github.com/tsilva/my-project"
